# flowstt

./: Cargo.toml  LICENSE  Makefile  README.md  about.html  config.html  index.html  logs.html  package-lock.json  package.json  pnpm-lock.yaml  setup.html  visualization.html  vite.config.ts
.github/workflows/: README.md  ci.yml  release.yml
openspec/changes/archive/2025-12-14-add-spectrogram-display/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-14-add-spectrogram-display/specs/audio-visualization/: spec.md
openspec/changes/archive/2025-12-15-add-system-audio-capture/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-17-add-speech-activity-display/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-17-refactor-multi-platform-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-18-enhance-transcription-panel/: proposal.md  tasks.md
openspec/changes/archive/2025-12-19-add-automated-icon-generation/: proposal.md  tasks.md
openspec/changes/archive/2025-12-28-add-linux-cuda-acceleration/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-30-add-visualization-window/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-31-add-timed-segment-submission/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-18-add-push-to-talk/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-12-add-config-window/: proposal.md  tasks.md
openspec/changes/archive/2026-02-14-add-theme-support/: design.md  proposal.md  tasks.md
openspec/changes/enhance-transcription-panel/: design.md  tasks.md
openspec/changes/enhance-transcription-panel/specs/audio-visualization/: spec.md
openspec/specs/audio-recording/: spec.md
openspec/specs/audio-visualization/: spec.md
openspec/specs/build-tooling/: spec.md
openspec/specs/config-window/: spec.md
openspec/specs/hotkey-input/: spec.md
openspec/specs/speech-transcription/: spec.md
openspec/specs/system-tray/: spec.md
openspec/specs/window-appearance/: spec.md
scripts/: generate-icons.sh  macos-clean  macos-reinstall  release.mjs  windows-clean.ps1  windows-install.ps1  windows-reinstall.ps1
src/: about.css  about.ts  config.css  config.ts  logs.css  logs.ts  main.ts  renderers.ts  setup.css  setup.ts  styles.css  theme.css  theme.ts  visualization.css  visualization.ts  vite-env.d.ts
src-cli/: Cargo.toml
src-cli/src/: client.rs  main.rs
src-common/: Cargo.toml
src-common/src/: config.rs  lib.rs  logging.rs  types.rs
src-common/src/ipc/: requests.rs  responses.rs
src-common/src/security/: mod.rs
src-engine/: Cargo.toml  build.rs
src-engine/src/: audio_loop.rs  config.rs  history.rs  lib.rs  processor.rs  ptt_controller.rs  state.rs
src-engine/src/clipboard/: linux.rs  macos.rs  mod.rs  windows.rs
src-engine/src/hotkey/: backend.rs  macos.rs  mod.rs  windows.rs
src-engine/src/ipc/: handlers.rs  mod.rs  server.rs
src-engine/src/platform/windows/: wasapi.rs
src-engine/src/test_mode/: mod.rs  playback.rs
src-engine/src/transcription/: transcribe_state.rs  transcriber.rs  whisper_ffi.rs
src-service/: Cargo.toml  build.rs
src-service/src/: audio_loop.rs  config.rs  main.rs  processor.rs  ptt_controller.rs  state.rs  test_capture.rs
src-service/src/hotkey/: backend.rs  linux.rs  macos.rs  mod.rs  windows.rs
src-service/src/ipc/: handlers.rs  server.rs
src-service/src/platform/macos/: coreaudio.rs
src-service/src/transcription/: transcribe_state.rs  whisper_ffi.rs
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.signing.conf.json  tauri.windows.conf.json
src-tauri/binaries/: flowstt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  binaries.rs  ipc_client.rs  lib.rs  main.rs  pipewire_audio.rs  processor.rs  transcribe.rs  transcribe_mode.rs  whisper_ffi.rs
src-tauri/src/platform/: backend.rs  mod.rs
src-tauri/src/platform/linux/: mod.rs  pipewire.rs
src-tauri/src/platform/macos/: mod.rs  stub.rs
src-tauri/src/platform/windows/: mod.rs  stub.rs  wasapi.rs
src-tauri/src/tray/: macos.rs  mod.rs  windows.rs
(+12 files in other folders)
