[package]
name = "flowstt-cli"
version = "0.1.1"
edition = "2021"
description = "Command-line interface for FlowSTT voice transcription"

[[bin]]
name = "flowstt"
path = "src/main.rs"

[dependencies]
# Shared types and IPC protocol
flowstt-common = { path = "../src-common" }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization for JSON output
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Colored terminal output
colored = "2"

# Cross-platform terminal
crossterm = "0.28"

# File paths
directories = "5"
dirs = "6.0.0"
