[package]
name = "flowstt-common"
version = "0.1.18"
edition = "2021"
description = "Shared types and IPC protocol for FlowSTT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async I/O for IPC protocol
tokio = { version = "1", features = ["io-util", "net", "sync", "macros", "rt"] }

# File paths
directories = "5"
dirs = "5"

# Platform-specific dependencies for peer verification
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Security",
] }
