[package]
name = "flowstt-app"
version = "0.1.0"
description = "FlowSTT - Speech to Text GUI"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# No features needed - all audio/transcription is handled by the service

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flowstt_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "io-util", "net"] }

# Shared types and IPC protocol
flowstt-common = { path = "../src-common" }

# Windows-specific dependencies for named pipes and Win32 APIs
[target.'cfg(target_os = "windows")'.dependencies]
tokio = { version = "1", features = ["net"] }
windows = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }
