[package]
name = "flowstt-app"
version = "0.1.4"
description = "FlowSTT - Speech to Text GUI"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
cuda = ["flowstt-engine/cuda"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flowstt_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "io-util", "net"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Shared types and IPC protocol
flowstt-common = { path = "../src-common" }

# Core engine - audio capture, transcription, IPC server
flowstt-engine = { path = "../src-engine" }

# Windows-specific dependencies for named pipes and Win32 APIs
[target.'cfg(target_os = "windows")'.dependencies]
tokio = { version = "1", features = ["net"] }
windows = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }
